# benchmark

./: .gitignore  CMakeLists.txt  main.cpp
headers/: benchmark.hpp  timer.hpp  traits.hpp
sources/: timer.cpp
